--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   padding: 0;
   background-color: rgb(191, 183, 183);
 }
+
+ul {
+  list-style-type: none; /* Убирает точки */
+  padding: 0; /* Убирает отступы */
+  margin: 0; /* Убирает поля */
+}
