--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,7 @@
   box-sizing: border-box;
 }
 
-ul {
-  list-style-type: none; /* Убирает точки */
-  padding: 0; /* Убирает отступы */
-  margin: 0; /* Убирает поля */
-}
-
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -23,7 +17,7 @@ h6,
 p {
   margin: 0;
   font-size: inherit;
-}
+} */
 
 ul,
 ol {
