--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-/* h1,
+h1,
 h2,
 h3,
 h4,
@@ -17,7 +17,7 @@ h6,
 p {
   margin: 0;
   font-size: inherit;
-} */
+}
 
 ul,
 ol {
