--- a/src/components/MailBox/MailBox.module.css
+++ b/src/components/MailBox/MailBox.module.css
@@ -1,10 +1,16 @@
 .maildiv {
     border: 1px solid red;
     border-radius: 25px;
-    margin-bottom: 15px;
+
     padding: 10px;
 }
 
 .title {
     color: red;
+    font-size: 26px;
+    margin-bottom: 17px;
+}
+
+.text {
+    margin-bottom: 10px;
 }
