--- a/src/components/MailBox/MailBox.module.css
+++ b/src/components/MailBox/MailBox.module.css
@@ -2,11 +2,11 @@
     border: 1px solid red;
     border-radius: 25px;
 
-    padding: 10px;
+    padding: 30px;
 }
 
 .title {
-    color: red;
+    color: rgb(78, 120, 170);
     font-size: 26px;
     margin-bottom: 17px;
 }
