--- a/src/components/MailBox/MailBox.module.css
+++ b/src/components/MailBox/MailBox.module.css
@@ -2,7 +2,7 @@
     border: 1px solid red;
     border-radius: 25px;
     margin-bottom: 10px;
-    padding: 30px;
+    padding: 10px 15px;
 }
 
 .title {
@@ -16,5 +16,5 @@
 }
 
 .maildiv.full {
-    background-color: rgb(227, 41, 41);
+    background-color: rgb(241, 144, 144);
 }
