--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -56,4 +56,4 @@ img {
   display: block;
   width: 100%;
   height: auto;
-}
+} */
