--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 0;
-  background-color: rgb(191, 183, 183);
+  /* background-color: rgb(191, 183, 183); */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -57,3 +57,4 @@ img {
   width: 100%;
   height: auto;
 }  */
+
