--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,13 +5,18 @@
 }
 
 .navLink{
-padding: 15px 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+text-align: center;
+width: 130px;
+height: 50px;
 border: 2px solid black;
 background-color: transparent;
 color: black;
 text-decoration: none;
 border-radius: 7px;
-font-size: 20px;
+font-size: 24px;
 transition: all 0.1s;
 }
 
